--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ serde_json = "1.0"
 dotenv = "0.15"
 actix = "0.13.5"
 reqwest = { version = "0.12.12", features = ["json"] }
-uuid = { version = "1.12.0", features = ["v4"] }
+uuid = { version = "1.12.0", features = ["v4", "serde"] }
